--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a class="twitter-timeline" data-width="600" data-height="600" data-theme="dark" href="https://twitter.com/scotgov?ref_src=twsrc%5Etfw">Tweets by scotgov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" data-width="600" data-height="600" data-theme="dark" href="https://twitter.com/NTFRS_FloodResp?ref_src=twsrc%5Etfw">Tweets by NTFRS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </body>
 </html>
